tests/paczka1/small_fuzzy/75368852.err
Error in line 1: D9S7EnFj8 S621 5,6
Error in line 4: Xkkb S676 27,8
Error in line 14: Kgk0KNKv S676 35,1
